[package]
name = "multitool"
version = "0.1.0"
authors = ["bissbotch <64175657+bissbotch@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["cargo"] }
walkdir = "2.5.0"
